fix(manual) stop stretching edgium-protect-2.jpg

--- a/src/manual.scss
+++ b/src/manual.scss
@@ -80,8 +80,11 @@
         justify-content: space-around;
 
         img {
-          width: 45%;
           padding: 1em;
+        }
+
+        > div {
+          margin: auto;
         }
       }
     }
